fixing transform on mobile

--- a/melissa.css
+++ b/melissa.css
@@ -33,7 +33,7 @@ ul {
 .nav {
   position: fixed;
   display: flex;
-  left: -100px;
+  left: -100%;
   justify-content: space-around;
   align-content: center;
   width: 100%;
@@ -42,7 +42,7 @@ ul {
   transition-duration: 400ms;
   transition-delay: 700ms;
   transform: translateX(100%);
-  -webkit-transition-property: transform;
+  -webkit-transition-property: -webkit-transform;
   -webkit-transition-timing-function: ease-out;
   -webkit-transition-duration: 400ms;
   -webkit-transition-delay: 700ms;
